--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Shopify PHP (Guzzle) API Wrapper",
     "type": "library",
     "license": "MIT",
+    "version": "1.1.1",
     "homepage": "http://www.shopifyextras.com",
     "authors": [
         {
