--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.0.3",
-        "guzzlehttp/guzzle-services": "~0.4"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "guzzlehttp/guzzle-services": "0.5.0",
+        "guzzlehttp/command": "0.7.0"
     },
     "autoload": {
         "psr-4": {
