--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~6.0",
-        "guzzlehttp/guzzle-services": "~1.1.0",
-        "guzzlehttp/command": "~1.0.0"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "guzzlehttp/guzzle-services": "0.5.0",
+        "guzzlehttp/command": "0.7.0"
     },
     "autoload": {
         "psr-4": {
